--- a/src/app/admin/admin-profile/admin-profile.component.html
+++ b/src/app/admin/admin-profile/admin-profile.component.html
@@ -47,7 +47,7 @@
             </li>
             <li class="nav-item nav-category">Main Menu</li>
             <li class="nav-item">
-              <a class="nav-link" routerLink="admin/dashboard">
+              <a class="nav-link" routerLink="/admin/dashboard">
                 <i class="menu-icon typcn typcn-document-text"></i>
                 <span class="menu-title">Dashboard</span>
               </a>
@@ -61,7 +61,7 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" routerLink="admin/profile">
+              <a class="nav-link active" routerLink="admin/profile">
                 <i class="menu-icon typcn typcn-bell"></i>
                 <span class="menu-title">Profile</span>
               </a>
