--- a/src/app/admin/dashboard-page/dashboard-page.component.html
+++ b/src/app/admin/dashboard-page/dashboard-page.component.html
@@ -19,7 +19,7 @@
                   <p class="mb-1 mt-3 font-weight-semibold">Alabidun Mubarak</p>
                   <p class="font-weight-light text-muted mb-0">Admin</p>
                 </div>
-                <a class="dropdown-item" routerLink="/profile">My Profile <i class="dropdown-item-icon ti-dashboard"></i></a>
+                <a class="dropdown-item" routerLink="/admin/profile">My Profile <i class="dropdown-item-icon ti-dashboard"></i></a>
                 <a class="dropdown-item" style="cursor: pointer;" (click)="logout()">Sign Out<i class="dropdown-item-icon ti-power-off"></i></a>
               </div>
             </li>
@@ -48,7 +48,7 @@
             </li>
             <li class="nav-item nav-category">Main Menu</li>
             <li class="nav-item">
-              <a class="nav-link" routerLink="#">
+              <a class="nav-link active" routerLink="#">
                 <i class="menu-icon typcn typcn-document-text"></i>
                 <span class="menu-title">Dashboard</span>
               </a>
@@ -62,7 +62,7 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" routerLink="/profile">
+              <a class="nav-link" routerLink="/admin/profile">
                 <i class="menu-icon typcn typcn-bell"></i>
                 <span class="menu-title">Profile</span>
               </a>
@@ -83,7 +83,7 @@
                     <div class="card text-white">
                       <div class="card-body">
                         <div class="d-flex justify-content-between pb-2 align-items-center">
-                          <h2 class="font-weight-semibold mb-0">4,624</h2>
+                          <h2 class="font-weight-semibold mb-0">{{ counts?.userCount }}</h2>
                           <div class="icon-holder">
                             <i class="mdi mdi-briefcase-outline"></i>
                           </div>
@@ -99,7 +99,7 @@
                     <div class="card text-white">
                       <div class="card-body">
                         <div class="d-flex justify-content-between pb-2 align-items-center">
-                          <h2 class="font-weight-semibold mb-0">4,624</h2>
+                          <h2 class="font-weight-semibold mb-0">{{ counts?.agentCount}}</h2>
                           <div class="icon-holder">
                             <i class="mdi mdi-briefcase-outline"></i>
                           </div>
@@ -137,8 +137,9 @@
                           <h4 class="card-title mb-0">Users</h4>
                         </div>
                         <p>Registered Users</p>
+
                         <div class="table-responsive">
-                          <table class="table table-striped table-hover">
+                          <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-striped table-hover">
                             <thead>
                               <tr>
                                 <th>Name</th>
@@ -157,23 +158,65 @@
                               </tr>
                             </thead>
                             <tbody>
-                              <tr *ngFor = "let user of users">
-                                <td>{{ user.firstname }} {{user.middlename}} {{user.lastname}}</td>
-                                <td>{{ user.uniqueId }}</td>
-                                <td>{{ user.agentId.name }}</td>
-                                <td>{{ user.email }}</td>
-                                <td>{{ user.updatedAt | date }}</td>
-                                <td>{{ user.gender }}</td>
-                                <td>{{ user.dob }}</td>
-                                <td>{{ user.zone }}</td>
-                                <td>{{ user.unit }}</td>
-                                <td>{{ user.phone_no }}</td>
-                                <td>{{ user.state }}</td>
-                                <td>{{ user.vehicle_no }}</td>
+                              <tr *ngFor="let user of users" data-toggle="modal" data-target="#exampleModal">
+                                <td>{{ user?.firstname }} {{user?.middlename}} {{user?.lastname}}</td>
+                                <td>{{ user?.uniqueId }}</td>
+                                <td>{{ user?.agentId.name }}</td>
+                                <td>{{ user?.email }}</td>
+                                <td>{{ user?.updatedAt | date }}</td>
+                                <td>{{ user?.gender }}</td>
+                                <td>{{ user?.dob }}</td>
+                                <td>{{ user?.zone }}</td>
+                                <td>{{ user?.unit }}</td>
+                                <td>{{ user?.phone_no }}</td>
+                                <td>{{ user?.state }}</td>
+                                <td>{{ user?.vehicle_no }}</td>
                                 <td>
                                   <!-- <label class="badge badge-success" data-toggle="modal" data-target="#exampleModal">Approve</label> -->
                                   <label class="badge {{user.approve? 'badge-success':'badge-danger'}}" (click) = "onApprove(user._id)">{{user.approve? 'Approved' : 'Approve'}}</label>
                                 </td>
+                              </tr>
+                            </tbody>
+                          </table>
+                
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="col-md-12 grid-margin">
+                    <div class="card">
+                      <div class="card-body">
+                        <div class="d-flex justify-content-between">
+                          <h4 class="card-title mb-0">Agents</h4>
+                        </div>
+                        <p>Registered Agents</p>
+                        <div class="table-responsive">
+                          <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-striped table-hover">
+                            <thead>
+                              <tr>
+                                <th>Name</th>
+                                <th>D.O.B</th>
+                                <th>Phone Number</th>
+                                <th>Email</th>
+                                <th>Vehicle Number</th>
+                                <th>Zone</th>
+                                <th>State</th>
+                                <th>Unit</th>
+                                <th>Action</th>
+                              </tr>
+                            </thead>
+                            <tbody>
+                              <tr>
+                                <td>INV-87239</td>
+                                <td>Viola Ford</td>
+                                <td>Paid</td>
+                                <td>20 Jan 2019</td>
+                                <td>$755</td>
+                                <td>$755</td>
+                                <td>$755</td>
+                                <td>$755</td>
+                                <td><label class="badge badge-success" >View</label></td>
                               </tr>
                             </tbody>
                           </table>
