--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -47,7 +47,7 @@
             </li>
             <li class="nav-item nav-category">Main Menu</li>
             <li class="nav-item">
-              <a class="nav-link" routerLink="/home">
+              <a class="nav-link active" routerLink="/home">
                 <i class="menu-icon typcn typcn-document-text"></i>
                 <span class="menu-title">Dashboard</span>
               </a>
