--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -54,7 +54,7 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" routerLink="/profile">
+              <a class="nav-link active" routerLink="/profile">
                 <i class="menu-icon typcn typcn-bell"></i>
                 <span class="menu-title">Profile</span>
               </a>
@@ -79,25 +79,22 @@
                           </button>
                         </div>
                         <div class="modal-body">
-                          <form class="forms-sample">
+                          <form [formGroup]="agentForm" (ngSubmit)="onSubmit()" class="forms-sample">
                             <div class="form-group">
                               <label for="exampleInputName1">Name</label>
-                              <input type="text" class="form-control" id="exampleInputName1" placeholder="Name">
+                              <input formControlName="name" type="text" class="form-control" id="exampleInputName1" placeholder="Name">
                             </div>
                             <div class="form-group">
                               <label for="exampleInputEmail3">Email address</label>
-                              <input type="email" class="form-control" id="exampleInputEmail3" placeholder="Email">
+                              <input formControlName="email" type="email" class="form-control" id="exampleInputEmail3" placeholder="Email">
                             </div>
                             <div class="form-group">
                               <label for="exampleInputPassword4">Password</label>
-                              <input type="password" class="form-control" id="exampleInputPassword4" placeholder="Password">
+                              <input formControlName = "password" type="password" class="form-control" id="exampleInputPassword4" placeholder="Password">
                             </div>
                             <div class="form-group">
-                              <label>Passport</label>
-                              <input type="file" name="img[]" class="file-upload-default">
-                              <div class="input-group col-xs-12">
-                                <input type="file" class="form-control file-upload-info" placeholder="Upload Image">
-                              </div>
+                              <label for="exampleInputPassword4">Confirm Password</label>
+                              <input formControlName = "confirmpassword" type="password" class="form-control" id="exampleInputPassword4" placeholder="Confrim Password">
                             </div>
                           </form>
                         </div>
