tested the card component

--- a/src/app/agent/capture/capture.component.html
+++ b/src/app/agent/capture/capture.component.html
@@ -54,7 +54,7 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" routerLink="/agent/capture">
+              <a class="nav-link active" routerLink="/agent/capture">
                 <i class="menu-icon typcn typcn-th-large-outline"></i>
                 <span class="menu-title">Add Bio-data</span>
               </a>
