--- a/src/app/agent/agent-dashboard/agent-dashboard.component.html
+++ b/src/app/agent/agent-dashboard/agent-dashboard.component.html
@@ -47,7 +47,7 @@
             </li>
             <li class="nav-item nav-category">Main Menu</li>
             <li class="nav-item">
-              <a class="nav-link" routerLink="/agent/dashboard">
+              <a class="nav-link active" routerLink="/agent/dashboard">
                 <i class="menu-icon typcn typcn-document-text"></i>
                 <span class="menu-title">Dashboard</span>
               </a>
@@ -104,7 +104,7 @@
                           </button>
                         </div>
                         <div class="modal-body">
-                          ...
+                          <app-card></app-card>
                         </div>
                         <div class="modal-footer">
                           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -121,7 +121,7 @@
                         </div>
                         <p>Registered Users</p>
                         <div class="table-responsive">
-                          <table class="table table-striped table-hover">
+                          <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-striped table-hover">
                             <thead>
                               <tr>
                                 <th>Name</th>
@@ -140,7 +140,7 @@
                               </tr>
                             </thead>
                             <tbody>
-                              <tr *ngFor = "let user of users">
+                              <tr *ngFor = "let user of users" data-toggle="modal" data-target="#exampleModal">
                                 <td>{{ user?.firstname }} {{user?.middlename}} {{user?.lastname}}</td>
                                 <td>{{ user?.uniqueId }}</td>
                                 <td>{{ user?.agentId.name }}</td>
