--- a/src/app/admin/dashboard-page/dashboard-page.component.html
+++ b/src/app/admin/dashboard-page/dashboard-page.component.html
@@ -121,7 +121,7 @@
                           </button>
                         </div>
                         <div class="modal-body">
-                          ...
+                          <app-card></app-card>
                         </div>
                         <div class="modal-footer">
                           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
