--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -19,7 +19,7 @@
                   <p class="font-weight-light text-muted mb-0">User</p>
                 </div>
                 <a class="dropdown-item" routerLink="/profile">My Profile <i class="dropdown-item-icon ti-dashboard"></i></a>
-                <a class="dropdown-item" routerLink="/login">Sign Out<i class="dropdown-item-icon ti-power-off"></i></a>
+                <a class="dropdown-item" style="cursor: pointer;" (click) = "logout()">Sign Out<i class="dropdown-item-icon ti-power-off"></i></a>
               </div>
             </li>
           </ul>
