--- a/src/app/admin/admin-profile/admin-profile.component.html
+++ b/src/app/admin/admin-profile/admin-profile.component.html
@@ -19,7 +19,7 @@
                   <p class="font-weight-light text-muted mb-0">Admin</p>
                 </div>
                 <a class="dropdown-item" routerLink="admin/profile">My Profile <i class="dropdown-item-icon ti-dashboard"></i></a>
-                <a class="dropdown-item" routerLink="admin">Sign Out<i class="dropdown-item-icon ti-power-off"></i></a>
+                <a class="dropdown-item" (click) = "logout()" style="cursor: pointer;">Sign Out<i class="dropdown-item-icon ti-power-off"></i></a>
               </div>
             </li>
           </ul>
@@ -76,68 +76,33 @@
             </div>
             <div class="row">
 
-              <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                    <div class="modal-dialog" role="document">
-                      <div class="modal-content">
-                        <div class="modal-header">
-                          <h5 class="modal-title" id="exampleModalLabel">Edit Profile</h5>
-                          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                          </button>
-                        </div>
-                        <div class="modal-body">
-                          <form class="forms-sample">
-                            <div class="form-group">
-                              <label for="exampleInputName1">Name</label>
-                              <input type="text" class="form-control" id="exampleInputName1" placeholder="Name">
-                            </div>
-                            <div class="form-group">
-                              <label for="exampleInputEmail3">Email address</label>
-                              <input type="email" class="form-control" id="exampleInputEmail3" placeholder="Email">
-                            </div>
-                            <div class="form-group">
-                              <label for="exampleInputPassword4">Password</label>
-                              <input type="password" class="form-control" id="exampleInputPassword4" placeholder="Password">
-                            </div>
-                            <div class="form-group">
-                              <label>Passport</label>
-                              <input type="file" name="img[]" class="file-upload-default">
-                              <div class="input-group col-xs-12">
-                                <input type="file" class="form-control file-upload-info" placeholder="Upload Image">
-                              </div>
-                            </div>
-                          </form>
-                        </div>
-                        <div class="modal-footer">
-                          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                          <button type="submit" class="btn btn-success">Save Changes</button>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
 
               <div class="col-md-12">
                   
-                  <div class="card">
+                <div class="card"> 
                   <div class="card-body">
-                    <h4 class="card-title">Profile</h4>
-                    <form class="forms-sample">
-                      <div class="form-group">
-                        <label for="exampleInputName1">Name</label>
-                        <input type="text" class="form-control" id="exampleInputName1" placeholder="Name" disabled="">
-                      </div>
-                      <div class="form-group">
-                        <label for="exampleInputEmail3">Email address</label>
-                        <input type="email" class="form-control" id="exampleInputEmail3" placeholder="Email" disabled="">
-                      </div>
-                      <div class="form-group">
-                        <label for="exampleInputPassword4">Password</label>
-                        <input type="password" class="form-control" id="exampleInputPassword4" placeholder="Password" disabled="">
-                      </div>
-                      <button type="button" class="btn btn-success mr-2" data-toggle="modal" data-target="#exampleModal">Edit</button>
-                    </form>
+                      <h4 class="card-title">Profile</h4>
+                      <form [formGroup]="adminForm" (ngSubmit)="onSubmit()" class="forms-sample">
+                          
+                          <div class="form-group">
+                              <label for="exampleInputPassword4">Password</label>
+                              <input formControlName="password" type="password" class="form-control"
+                                  id="exampleInputPassword4" placeholder="Password" >
+                          </div>
+                          <div class="form-group">
+                              <label for="exampleInputPassword4">New Password</label>
+                              <input formControlName="newpassword" type="password" class="form-control"
+                                  id="exampleInputNewPassword4" placeholder="New Password" >
+                          </div>
+                          <div class="form-group">
+                              <label for="exampleInputPassword4">Confirm Password</label>
+                              <input formControlName="confirmpassword" type="password" class="form-control"
+                                  id="exampleInputConfirmPassword4" placeholder="Confirm Password">
+                          </div>
+                          <button type="submit" class="btn btn-success mr-2" [class.spinner]="loading" [disabled]="loading">Save Changes</button>
+                      </form>
                   </div>
-                </div>
+              </div>
 
               </div>
             </div>
