--- a/src/app/admin/add-agent/add-agent.component.html
+++ b/src/app/admin/add-agent/add-agent.component.html
@@ -86,6 +86,10 @@
                 <p class="card-description"> Add Agent Information </p>
                 <form [formGroup]="adminForm" (ngSubmit)="onSubmit()" class="forms-sample"
                   enctype="multipart/form-data">
+                  <webcam [height]="500" [width]="500" [trigger]="triggerObservable" 
+                  (imageCapture)="handleImage($event)" *ngIf="showWebcam"
+                  [allowCameraSwitch]="allowCameraSwitch" [switchCamera]="nextWebcamObservable" [videoOptions]="videoOptions" (cameraSwitched)="cameraWasSwitched($event)"
+                  (initError)="handleInitError($event)"></webcam>
                   <div class="form-group">
                     <label for="exampleInputName1">Name</label>
                     <input type="text" formControlName="name" class="form-control" id="exampleInputName1"
@@ -103,13 +107,14 @@
                   </div>
                   <div class="form-group">
                     <div class="input-group col-xs-12">
-                      <button class="btn btn-secondary" color="basic" type="button" (click)="filePicker.click()">Pick an
-                        image</button>
-                      <input type="file" #filePicker (change)="onImagePicked($event)">
+                      <button class="btn btn-secondary" color="basic" type="button" (click)="triggerSnapshot()" *ngIf="showWebcam">Capture</button>
+                      &nbsp;
+                      <button class="btn btn-secondary" color="basic" type="button" (click)="toggleWebcam()">{{ title }}</button>
+                      <!-- <input type="file" #filePicker (change)="onImagePicked($event)"> -->
                     </div>
-                    <div class="image-preview" *ngIf = "imagePreview !== '' && imagePreview && adminForm.get('image').valid">
+                    <div class="image-preview" *ngIf = "webcamImage">
                       <img 
-                      [src]="imagePreview" 
+                      [src]="webcamImage.imageAsDataUrl"
                       alt="adminForm.value.title">
                     </div>
                   </div>
