--- a/src/app/auth/agent/login/login.component.html
+++ b/src/app/auth/agent/login/login.component.html
@@ -42,8 +42,7 @@
               </div>
               <div class="form-group d-flex justify-content-between">
                 <div class="form-check form-check-flat mt-0">
-                  <label class="form-check-label">
-                    <input type="checkbox" class="form-check-input" checked> Keep me signed in </label>
+                  <a routerLink="/forgot-password" class="text-black">Forgot Password</a>
                 </div>
                 <!-- <a href="#" class="text-small forgot-password text-black">Forgot Password</a> -->
               </div>
