--- a/src/app/forgot-password/forgot-password.component.html
+++ b/src/app/forgot-password/forgot-password.component.html
@@ -22,27 +22,11 @@
                 </div>
               </div>
               <div class="form-group">
-                <label class="label">Password</label>
-                <div class="input-group">
-                  <input type="password" class="form-control" placeholder="*********" formControlName="password">
-                  <div class="input-group-append">
-                    <span class="input-group-text">
-                      <i class="mdi mdi-check-circle-outline"></i>
-                    </span>
-                  </div>
-                  <div *ngIf="!credentialsForm.controls.password.valid &&
-            credentialsForm.controls.password.dirty"
-            class="validator-error">
-        <p>Enter a valid password</p>
-        </div>
-                </div>
-              </div>
-              <div class="form-group">
-                <button [disabled]="!credentialsForm.valid" class="btn btn-primary submit-btn btn-block" [class.spinner]="loading" [disabled]="loading" type="submit">{{ title }}</button>
+                <button [disabled]="!credentialsForm.valid" class="btn btn-primary submit-btn btn-block" type="submit">{{ title }}</button>
               </div>
               <div class="form-group d-flex justify-content-between">
                 <div class="form-check form-check-flat mt-0">
-                  <a routerLink="/forgot-password" class="text-black">Forgot Password</a>
+                  <a (click)="backClicked()" class="text-black cursor">Go Back</a>
                 </div>
                 <!-- <a href="#" class="text-small forgot-password text-black">Forgot Password</a> -->
               </div>
