Webcam image upload fixed

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -11,11 +11,11 @@
       <ul class="navbar-nav ml-auto">
         <li class="nav-item dropdown d-none d-xl-inline-block user-dropdown">
           <a class="nav-link dropdown-toggle" id="UserDropdown" href="#" data-toggle="dropdown" aria-expanded="false">
-            <img class="img-xs rounded-circle" src="../assets/images/faces/face8.jpg" alt="Profile image"> </a>
+            <img class="img-xs rounded-circle" src="{{userInformation.image}}" alt="Profile image"> </a>
           <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="UserDropdown">
             <div class="dropdown-header text-center">
-              <img class="img-md rounded-circle" src="../assets/images/faces/face8.jpg" alt="Profile image">
-              <p class="mb-1 mt-3 font-weight-semibold">Azeez Oje</p>
+              <img class="img-md rounded-circle" src="{{userInformation.image}}" alt="Profile image">
+              <p class="mb-1 mt-3 font-weight-semibold">{{userInformation.name}}</p>
               <p class="font-weight-light text-muted mb-0">User</p>
             </div>
             <a class="dropdown-item" routerLink="/profile">My Profile <i
@@ -38,11 +38,11 @@
         <li class="nav-item nav-profile">
           <a href="#" class="nav-link">
             <div class="profile-image">
-              <img class="img-xs rounded-circle" src="../assets/images/faces/face8.jpg" alt="profile image">
+              <img class="img-xs rounded-circle" src="{{userInformation.image}}" alt="profile image">
               <div class="dot-indicator bg-success"></div>
             </div>
             <div class="text-wrapper">
-              <p class="profile-name">Azeez Oje</p>
+              <p class="profile-name">{{userInformation.name}}</p>
               <p class="designation">User</p>
             </div>
           </a>
