--- a/src/app/admin/dashboard-page/dashboard-page.component.html
+++ b/src/app/admin/dashboard-page/dashboard-page.component.html
@@ -111,7 +111,7 @@
                     </div>
                   </div>
 
-                  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                  <div class="modal fade" id="{{ user?.uniqueId }}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" *ngFor = "let user of users">
                     <div class="modal-dialog" role="document">
                       <div class="modal-content">
                         <div class="modal-header">
@@ -121,7 +121,7 @@
                           </button>
                         </div>
                         <div class="modal-body">
-                          <app-card></app-card>
+                          <app-card [data]="user"></app-card>
                         </div>
                         <div class="modal-footer">
                           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -158,7 +158,7 @@
                               </tr>
                             </thead>
                             <tbody>
-                              <tr *ngFor="let user of users" data-toggle="modal" >
+                              <tr *ngFor="let user of users" >
                                 <td>{{ user?.firstname }} {{user?.middlename}} {{user?.lastname}}</td>
                                 <td>{{ user?.uniqueId | uppercase }}</td>
                                 <td>{{ user?.agentId? user?.agentId.name : 'Unknown'}}</td>
@@ -173,7 +173,9 @@
                                 <td>{{ user?.vehicle_no }}</td>
                                 <td>
                                   <!-- <label class="badge badge-success" data-toggle="modal" data-target="#exampleModal">Approve</label> -->
-                                  <label class="badge {{user.approve? 'badge-success':'badge-danger'}}" (click) = "onApprove(user._id)">{{user.approve? 'Approved' : 'Approve'}}</label>
+                                  <button class="btn btn-secondary" data-toggle="modal" 
+                                  [attr.data-target]="'#'+user.uniqueId">View</button> &nbsp;
+                                  <button class="btn badge {{user.approve? 'badge-success':'badge-danger'}}" (click) = "onApprove(user._id)">{{user.approve? 'Approved' : 'Approve'}}</button>
                                 </td>
                               </tr>
                             </tbody>
@@ -210,10 +212,10 @@
                                 <td>{{agent?.is_active? 'Active' : 'Disabled'}}</td>
                                 <td>
                                   <!-- <label class="badge badge-success" >View</label> -->
-                                  <label class="badge {{agent?.is_active? 'badge-danger' : 'badge-success'}} mr-1" (click) = "onAccountStatus(agent?._id)">
+                                  <button class="btn badge {{agent?.is_active? 'badge-danger' : 'badge-success'}} mr-1" (click) = "onAccountStatus(agent?._id)">
                                     {{agent?.is_active? 'Deactivate' : 'Activate'}}
-                                  </label>
-                                  <label class="badge badge-danger" (click)="onDelete(agent?._id)">X</label>
+                                  </button>
+                                  <button class="btn badge badge-danger" (click)="onDelete(agent?._id)">Delete</button>
                                 </td>
                               </tr>
                             </tbody>
