--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -68,33 +68,14 @@
             <div class="row page-title-header">
             </div>
             <div class="row">
-              <div class="col-md-12">
+              <div class="col-sm-12 col-md-6">
                 <div class="row">
-
-
-                  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                    <div class="modal-dialog" role="document">
-                      <div class="modal-content">
-                        <div class="modal-header">
-                          <h5 class="modal-title" id="exampleModalLabel">ID Card</h5>
-                          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                          </button>
-                        </div>
-                        <div class="modal-body">
-                          ...
-                        </div>
-                        <div class="modal-footer">
-                          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="col-md-12 grid-margin">
-
-                  </div>
-                  
+                  <app-card [data]="user"></app-card>
+                </div>
+              </div>
+              <div class="col-sm-12 col-md-6">
+                <div class="row">
+                  <app-card-back></app-card-back>                                    
                 </div>
               </div>
             </div>
