Error Interceptor fixed

--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -14,7 +14,7 @@
           <div class="credit-card-date"><span class="title">Gender</span><span class="credit-font">{{ data?.gender }}</span></div>
         </div> -->
         <div class="pull-left">
-          <div class="credit-font credit-author">{{ data?.uniqueId }}</div>
+          <div class="credit-font credit-author">{{ data?.uniqueId | uppercase }}</div>
         </div>
         <div class="pull-right credit-author credit-card-date">{{ data?.gender }}</div>
       </div>
