--- a/src/app/error/error.component.html
+++ b/src/app/error/error.component.html
@@ -1,1 +1,7 @@
-<p>error works!</p>
+<h1 mat-dialog-title>Error</h1>
+<div mat-dialog-content>
+    <p mat-body-1>{{ data.message }}</p>
+</div>
+<div mat-dialog-actions >
+    <button mat-button [mat-dialog-close]>Okay!</button>
+</div>
