refactored the agent and user public details

--- a/src/app/agent/agent-profile/agent-profile.component.html
+++ b/src/app/agent/agent-profile/agent-profile.component.html
@@ -54,14 +54,14 @@
                 </li>
                 <li class="nav-item nav-category">Main Menu</li>
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="/home">
+                    <a class="nav-link" routerLink="/agent">
                         <i class="menu-icon typcn typcn-document-text"></i>
                         <span class="menu-title">Dashboard</span>
                     </a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link active" routerLink="/profile">
+                    <a class="nav-link active" routerLink="/agent/profile">
                         <i class="menu-icon typcn typcn-bell"></i>
                         <span class="menu-title">Profile</span>
                     </a>
