--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -6,7 +6,7 @@
         <div class="shape"><span class="txt">NP</span></div> <span class="text">NUPENG</span>
       </div>
     </header>
-    <div class="mk-icon-sim"><img [src]="data.image" style="height: 5em"></div>
+    <div class="mk-icon-sim"><img [src]="data?.image" style="height: 5em"></div>
     <div class="credit-font credit-card-number">{{ data?.firstname }} {{data?.middlename.charAt(0)}}. {{data?.lastname}}</div>
     <footer class="foot">
       <div class="clearfix">
