Fixed the agent reference Id

--- a/src/app/admin/dashboard-page/dashboard-page.component.html
+++ b/src/app/admin/dashboard-page/dashboard-page.component.html
@@ -144,7 +144,7 @@
                               <tr>
                                 <th>Name</th>
                                 <th>Unique Id</th>
-                                <th>Agent</th>
+                                <!-- <th>Agent</th> -->
                                 <th>Email</th>
                                 <th>Updated On</th>
                                 <th>Gender</th>
@@ -161,7 +161,7 @@
                               <tr *ngFor="let user of users" >
                                 <td>{{ user?.firstname }} {{user?.middlename}} {{user?.lastname}}</td>
                                 <td>{{ user?.uniqueId | uppercase }}</td>
-                                <td>{{ user?.agentId? user?.agentId.name : 'Unknown'}}</td>
+                                <!-- <td>{{ user?.agentId? user?.agentId.name : 'Unknown'}}</td> -->
                                 <td>{{ user?.email }}</td>
                                 <td>{{ user?.updatedAt | date }}</td>
                                 <td>{{ user?.gender }}</td>
