--- a/src/app/admin/admin-profile/admin-profile.component.html
+++ b/src/app/admin/admin-profile/admin-profile.component.html
@@ -93,13 +93,14 @@
                               <label for="exampleInputPassword4">New Password</label>
                               <input formControlName="newpassword" type="password" class="form-control"
                                   id="exampleInputNewPassword4" placeholder="New Password" >
+                                  <mat-error *ngIf="message">{{message}}</mat-error>
                           </div>
                           <div class="form-group">
                               <label for="exampleInputPassword4">Confirm Password</label>
                               <input formControlName="confirmpassword" type="password" class="form-control"
                                   id="exampleInputConfirmPassword4" placeholder="Confirm Password">
                           </div>
-                          <button type="submit" class="btn btn-success mr-2" [class.spinner]="loading" [disabled]="loading">Save Changes</button>
+                          <button type="submit" class="btn btn-success mr-2" [class.spinner]="loading" [disabled]="!adminForm.valid">Save Changes</button>
                       </form>
                   </div>
               </div>
