--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -89,6 +89,7 @@
                     <label for="exampleInputPassword4">New Password</label>
                     <input formControlName="newpassword" type="password" class="form-control"
                       id="exampleInputNewPassword4" placeholder="New Password">
+                      <mat-error *ngIf="message">{{message}}</mat-error>
                   </div>
                   <div class="form-group">
                     <label for="exampleInputPassword4">Confirm Password</label>
